Settings: General weather settings, (1/2):
Move all non weather widget specific preferences into a new preferences screen
This has no affect while adding cLock as home screen widget.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,8 @@
         <activity android:name=".preference.ClockPreferences" />
         <activity android:name=".preference.CalendarPreferences" />
         <activity android:name=".preference.WeatherPreferences" />
+        <activity android:name=".preference.WeatherSettingPreferences" />
+        <activity android:name=".preference.WeatherWidgetPreferences" />
 
         <!-- The weather forecast activity -->
         <activity android:name=".weather.ForecastActivity"
